--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,9 @@ jobs:
       - run:
           name: Create Scratch Org
           command: . build/create-scratch-org.sh
-      - run:
-          name: Validate Components & Run Tests
-          command: . build/test.sh
+      # - run:
+      #     name: Validate Components & Run Tests
+      #     command: . build/test.sh
       - store_test_results:
           path: test-results
   deploy-prod:
