--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -1,6 +1,29 @@
 {
     "compilerOptions": {
+        "experimentalDecorators": true,
         "baseUrl": ".",
-        "paths": {}
+        "paths": {
+            "c/match": [
+                "../../../../races-assessment/force-app/main/default/lwc/match/match.js"
+            ],
+            "c/pagination": [
+                "../../../../races-assessment/force-app/main/default/lwc/pagination/pagination.js"
+            ],
+            "c/parentComponent": [
+                "../../../../races-assessment/force-app/main/default/lwc/parentComponent/parentComponent.js"
+            ],
+            "c/picklistRaces": [
+                "../../../../races-assessment/force-app/main/default/lwc/picklistRaces/picklistRaces.js"
+            ]
+        }
+    },
+    "include": [
+        "**/*",
+        "../../../../.sfdx/typings/lwc/**/*.d.ts"
+    ],
+    "typeAcquisition": {
+        "include": [
+            "jest"
+        ]
     }
 }
