--- a/force-app/main/default/lwc/registration/jsconfig.json
+++ b/force-app/main/default/lwc/registration/jsconfig.json
@@ -1,12 +1,12 @@
 {
     "compilerOptions": {
+        "experimentalDecorators": true,
         "baseUrl": ".",
         "paths": {
             "c/registration": [
                 "registration/registration.js"
             ]
-        },
-        "experimentalDecorators": true
+        }
     },
     "include": [
         "**/*",
